Actualizar traducciones y añadir validaciones para el plan contable

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -42,6 +42,7 @@
     "accounting-items": "Buchhaltungsartikel",
     "accounting-lines-error": "Fehler bei der Buchung",
     "accounting-plan": "Buchhaltungsplan",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Der Buchhaltungseintrag ist möglicherweise mit diesem anderen dupliziert. Wenn nicht, ändern Sie einfach das Konzept, um diese Meldung zu vermeiden.",
     "accounting-reports": "Buchhaltungsberichte",
     "accounting-within-regularization": "In diesem Zeitraum gibt es bereits eine steuerliche Regularisierung. Es können keine Änderungen vorgenommen werden.",
@@ -364,6 +365,7 @@
     "cron-job": "Programmierte Arbeit",
     "cron-timeout": "Der Cron wurde gestoppt, um die maximale PHP-Ausführungszeit nicht zu überschreiten. Bitte führen Sie den Cron über das Terminal aus, um dieses Limit zu vermeiden.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
     "current-quarter": "Aktuelles Quartal",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
     "new-price": "Neuer Preis",
+    "new-product": "Nuevo producto",
     "new-refund": "neue Rückerstattung",
+    "new-subaccount": "Neues Unterkonto",
     "new-supplier": "Neuer Lieferant",
     "news": "Nachrichten",
     "next": "Nächster",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Sozialversicherungsnummer",
     "software": "Software",
     "sort": "Reihenfolge",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Nach Spalte sortieren",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Aufsteigend sortiert",
     "sorted-desc": "Absteigend sortiert",
     "source": "Quelle",
