--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -42,6 +42,7 @@
     "accounting-items": "Éléments comptables",
     "accounting-lines-error": "Erreur dans les lignes comptables",
     "accounting-plan": "Plan comptable",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Entrée comptable possible dupliquée de cet autre. Si ce n'est pas le cas, pour éviter ce message, changez simplement le concept.",
     "accounting-reports": "Rapports de comptabilité",
     "accounting-within-regularization": "L'entrée comptable est dans une régularisation de %taxe%. Elle ne peut pas être supprimée.",
@@ -364,6 +365,7 @@
     "cron-job": "Tâche programmée",
     "cron-timeout": "Le cron s'est arrêté pour ne pas dépasser le temps d'exécution maximum de PHP. Veuillez exécuter le cron depuis le terminal pour éviter cette limite.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Devise",
     "currency-position": "Position du symbole de la devise",
     "current-quarter": "Trimestre actuel",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Vous pouvez ajouter un produit en cliquant sur le bouton du produit ou en saisissant sa référence ou son code-barres dans le champ du code-barres. Ou appuyez sur le bouton de ligne pour une ligne sans produit.",
     "new-password": "Nouveau mot de passe",
     "new-price": "Nouveau prix",
+    "new-product": "Nuevo producto",
     "new-refund": "Nouveau remboursement",
+    "new-subaccount": "Nouveau sous-compte",
     "new-supplier": "Nouveau fournisseur",
     "news": "informations",
     "next": "Prochain",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Numéro de sécurité sociale",
     "software": "Logiciel",
     "sort": "Commande",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Tri par colonne",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Trier par date décroissante.",
     "sort-by-date-desc": "Trier par date décroissante.",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Trier par référence asc.",
     "sort-by-ref-desc": "Trier par référence descendante.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Tri par ordre croissant",
     "sorted-desc": "Tri par ordre décroissant",
     "source": "Source",
