--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -42,6 +42,7 @@
     "accounting-items": "Articoli contabili",
     "accounting-lines-error": "errore-righe-contabili",
     "accounting-plan": "piano contabile",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Eventuale registrazione contabile duplicata di quest'altra. Se non c'è, per evitare questo messaggio, cambia semplicemente il concetto.",
     "accounting-reports": "Rapporti contabili",
     "accounting-within-regularization": "La registrazione contabile rientra in una regolarizzazione del % IVA %. Non può essere eliminato.",
@@ -364,6 +365,7 @@
     "cron-job": "Lavoro pianificato",
     "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite.",
     "crons": "Cron",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Moneta",
     "currency-position": "Posizione del simbolo di valuta",
     "current-quarter": "Trimestre attuale",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
     "new-price": "Nuovo prezzo",
+    "new-product": "Nuevo producto",
     "new-refund": "Nuovo rimborso",
+    "new-subaccount": "Nuovo sottoconto",
     "new-supplier": "nuovo fornitore",
     "news": "notizie",
     "next": "Il prossimo",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Numero di previdenza sociale",
     "software": "Software",
     "sort": "Ordinare",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordina per colonna",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordina per data decrescente",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
     "source": "fonte",
