--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -42,6 +42,7 @@
     "accounting-items": "Itens de contabilidade",
     "accounting-lines-error": "erro de linhas de contabilidade",
     "accounting-plan": "plano de contabilidade",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Possível lançamento contábil duplicado deste outro. Se não houver, para evitar essa mensagem, basta alterar o conceito.",
     "accounting-reports": "Relatórios de contabilidade",
     "accounting-within-regularization": "O registo contábil está dentro de uma regularização de %tax%. Não pode ser excluído.",
@@ -364,6 +365,7 @@
     "cron-job": "Tarefa programada",
     "cron-timeout": "O cron parou para não ultrapassar o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar este limite.",
     "crons": "Cronós",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre atual",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
+    "new-product": "Nuevo producto",
     "new-refund": "Nova Devolução",
+    "new-subaccount": "Nova subconta",
     "new-supplier": "Novo Fornecedor",
     "news": "Notícias",
     "next": "Próximo",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Número de Segurança Social",
     "software": "Software",
     "sort": "Ordenar",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar por coluna",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordenado de forma ascendente",
     "sorted-desc": "Ordenado decrescente",
     "source": "Fonte",
