--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -42,6 +42,7 @@
     "accounting-items": "Partides contables",
     "accounting-lines-error": "Erro en les llínees de l'assentament contable",
     "accounting-plan": "Pla contable",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "L'assentament està possiblement duplicat en aquest altre. Si no fora aixina, simplement canvia el concepte per evitar aquest missatge.",
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
@@ -364,6 +365,7 @@
     "cron-job": "Tasca programada",
     "cron-timeout": "El cron s'ha aturat per a no superar el temps màxim d'execució de PHP. Si us plau, executa el cron des de terminal per a evitar aquest límit.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Moneda",
     "currency-position": "Posició del símbol de la moneda",
     "current-quarter": "Trimestre actual",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
+    "new-product": "Nuevo producto",
     "new-refund": "Nova devolució",
+    "new-subaccount": "Nou subcompte",
     "new-supplier": "Nou proveïdor",
     "news": "Notícies",
     "next": "Següent",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Número de la Seguritat Social",
     "software": "Programari",
     "sort": "Orde",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar per columna",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar per referència desc.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Fuente",
