--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -42,6 +42,7 @@
     "accounting-items": "Partides comptables",
     "accounting-lines-error": "Error en les línies del seient comptable",
     "accounting-plan": "Pla contable",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "L'assentament comptable possiblement està duplicat amb aquest altre. Si no és així, per evitar aquest missatge, simplement canviï el concepte.",
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
@@ -364,6 +365,7 @@
     "cron-job": "Tasca programada",
     "cron-timeout": "El cron s'ha aturat per no superar el temps màxim d'execució de PHP. Si us plau, executa el cron des de terminal per evitar aquest límit.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
     "current-quarter": "Trimestre actual",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Pots afegir un producte prement el botó producte o escrivint la seva referència o codi de barres al camp codi de barres. O prem el botó línia per a una línia sense producte.",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
+    "new-product": "Nuevo producto",
     "new-refund": "Nova devolució",
+    "new-subaccount": "Nova subcompte",
     "new-supplier": "Nou proveïdor",
     "news": "Notícies",
     "next": "Següent",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Nombre Seguretat Social",
     "software": "Software",
     "sort": "Ordre",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar per columna",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar per data desc.",
     "sort-by-date-desc": "Ordenar per data desc",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Font",
