--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -42,6 +42,7 @@
     "accounting-items": "Accounting items",
     "accounting-lines-error": "Accounting lines error",
     "accounting-plan": "Accounting plan",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Accounting entry possible duplicated of this other. If there isn't, to avoid this message, simply change the concept.",
     "accounting-reports": "Accounting reports",
     "accounting-within-regularization": "There is already a tax regularization in this period. No changes can be made.",
@@ -364,6 +365,7 @@
     "cron-job": "Scheduled Task",
     "cron-timeout": "The cron has stopped to prevent exceeding the maximum PHP execution time. Please run the cron from the terminal to avoid this limit.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Currency",
     "currency-position": "Currency position",
     "current-quarter": "Current quarter",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Puede añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulse el botón línea para una línea sin producto.",
     "new-password": "New password",
     "new-price": "New price",
+    "new-product": "Nuevo producto",
     "new-refund": "New refund",
+    "new-subaccount": "New Subaccount",
     "new-supplier": "New supplier",
     "news": "News",
     "next": "Next",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Social Security number",
     "software": "Software",
     "sort": "Order",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sort by column",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Sort by reference asc.",
     "sort-by-ref-desc": "Sort by reference desc.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Sorted ascending",
     "sorted-desc": "Sorted descending",
     "source": "Fuente",
