--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -42,6 +42,7 @@
     "accounting-items": "Partidas contables",
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "El asiento contable posiblemente está duplicado con este otro. Si no es así, para evitar este mensaje, simplemente cambie el concepto.",
     "accounting-reports": "Informes contables",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
@@ -364,6 +365,7 @@
     "cron-job": "Tarea programada",
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
     "crons": "Crons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
     "current-quarter": "Trimestre actual",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nueva contraseña",
     "new-price": "Nuevo precio",
+    "new-product": "Nuevo producto",
     "new-refund": "Nueva devolución",
+    "new-subaccount": "Nueva subcuenta",
     "new-supplier": "Nuevo proveedor",
     "news": "Noticias",
     "next": "Siguiente",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Número Seguridad Social",
     "software": "Software",
     "sort": "Orden",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar por columna",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
     "source": "Fuente",
