--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -42,6 +42,7 @@
     "accounting-items": "Kontabilitate partidak",
     "accounting-lines-error": "Kontabilitate idazpen lerroetan erroreak daude",
     "accounting-plan": "Kontabilitate plana",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Kontabilitate idazpena beste honekin bikoiztua dago seguru aski. Horrela ez bada, mezu hau saihesteko, besterik gabe kontzeptua aldatu.",
     "accounting-reports": "Kontabilitate txostenak",
     "accounting-within-regularization": "Zergen erregularizazio bat ba dago denboraldi honetarako. Ezin dira aldaketak egin.",
@@ -364,6 +365,7 @@
     "cron-job": "Zeregin programatua",
     "cron-timeout": "Kronoa gelditu da PHP-ren exekuzio denbora maksimoa gainditu ez dadin. Mesedez, exekutatu kronoa terminaletik, mugarik hau saihesteko.",
     "crons": "Krons",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
     "current-quarter": "Laukiztako gertakariak",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Produktu bat gehitu dezakezu produktuaren botoia sakatuz edo bere erreferentzia edo barra-kodea barra-kodearen eremuan idatziz. Edo sakatu lerro-botoia produkturik gabeko lerro baterako.",
     "new-password": "Pasahitz berria",
     "new-price": "Prezio berria",
+    "new-product": "Nuevo producto",
     "new-refund": "Itzulketa berria",
+    "new-subaccount": "Subkontu berri bat.",
     "new-supplier": "Hornitzaile berria",
     "news": "Berriak",
     "next": "Hurrengoa",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Gizarte segurantza zenbakia",
     "software": "Software",
     "sort": "Ordena",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Zutabean sailkatu",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Dataren arabera sailkatu azkenean",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Erreferentziaren arabera sailkatu goranz",
     "sort-by-ref-desc": "Erreferentziaren arabera sailkatu beheranz",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Gorantz sailkatuta",
     "sorted-desc": "Beherantz sailkatuta",
     "source": "Hornidura",
