--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -42,6 +42,7 @@
     "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Błąd w liniach księgowych",
     "accounting-plan": "Plan księgowy",
+    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
     "accounting-possible-duplicated": "Możliwe, że to zapis księgowy jest zduplikowany z innym. Jeśli nie, aby uniknąć tego komunikatu, po prostu zmień koncepcję.",
     "accounting-reports": "Raporty księgowe",
     "accounting-within-regularization": "W tym okresie już istnieje regulacja podatkowa. Nie można wprowadzać zmian.",
@@ -364,6 +365,7 @@
     "cron-job": "Zadanie cykliczne",
     "cron-timeout": "Cron został zatrzymany, aby nie przekroczyć maksymalnego czasu wykonania PHP. Proszę uruchomić cron z terminala, aby uniknąć tego ograniczenia.",
     "crons": "Crony",
+    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
     "currency": "Waluta",
     "currency-position": "Pozycja symbolu waluty",
     "current-quarter": "Bieżący kwartał",
@@ -1073,7 +1075,9 @@
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
     "new-password": "Nowe hasło",
     "new-price": "Nowa cena",
+    "new-product": "Nuevo producto",
     "new-refund": "Nowy zwrot",
+    "new-subaccount": "Nowe subkonto",
     "new-supplier": "Nowy dostawca",
     "news": "Aktualności",
     "next": "Następny",
@@ -1508,11 +1512,25 @@
     "social-security-number": "Numer ubezpieczenia społecznego",
     "software": "Oprogramowanie",
     "sort": "Sortowanie",
+    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sortuj wg kolumny",
+    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
+    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
+    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Posortowane rosnąco",
     "sorted-desc": "Posortowane malejąco",
     "source": "Źródło",
