Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -42,7 +42,7 @@
     "accounting-items": "Partides comptables",
     "accounting-lines-error": "Error en les línies del seient comptable",
     "accounting-plan": "Pla contable",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "El pla comptable ha de tenir com a mínim 2 nivells: comptes i subcomptes.",
     "accounting-possible-duplicated": "L'assentament comptable possiblement està duplicat amb aquest altre. Si no és així, per evitar aquest missatge, simplement canviï el concepte.",
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
@@ -365,7 +365,7 @@
     "cron-job": "Tasca programada",
     "cron-timeout": "El cron s'ha aturat per no superar el temps màxim d'execució de PHP. Si us plau, executa el cron des de terminal per evitar aquest límit.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "El CSV ha de tenir com a mínim 2 columnes",
     "currency": "Moneda",
     "currency-position": "Posició símbol de divisa",
     "current-quarter": "Trimestre actual",
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Pots afegir un producte prement el botó producte o escrivint la seva referència o codi de barres al camp codi de barres. O prem el botó línia per a una línia sense producte.",
     "new-password": "Nova contrasenya",
     "new-price": "Nou preu",
-    "new-product": "Nuevo producto",
+    "new-product": "Nou producte",
     "new-refund": "Nova devolució",
     "new-subaccount": "Nova subcompte",
     "new-supplier": "Nou proveïdor",
@@ -1512,25 +1512,25 @@
     "social-security-number": "Nombre Seguretat Social",
     "software": "Software",
     "sort": "Ordre",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-balance-asc": "Ordenar per saldo ascendent",
+    "sort-by-balance-desc": "Ordenar per saldo descendent",
+    "sort-by-code-asc": "Ordenar per codi ascendent",
+    "sort-by-code-desc": "Ordenar per codi descendent",
     "sort-by-column": "Ordenar per columna",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-asc": "Ordenar per crèdit ascendent",
+    "sort-by-credit-desc": "Ordenar per crèdit descendent",
     "sort-by-date-asc": "Ordenar per data desc.",
     "sort-by-date-desc": "Ordenar per data desc",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-debit-asc": "Ordenar per dèbit ascendent",
+    "sort-by-debit-desc": "Ordenar per dèbit descendent",
+    "sort-by-description-asc": "Ordenar per descripció ascendent",
+    "sort-by-description-desc": "Ordenar per descripció descendent",
+    "sort-by-price-asc": "Ordenar per preu ascendent",
+    "sort-by-price-desc": "Ordenar per preu descendent",
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-asc": "Ordenar per estoc ascendent",
+    "sort-by-stock-desc": "Ordenar per estoc descendent",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Font",
