--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -365,7 +365,7 @@
     "cron-job": "Programmierte Arbeit",
     "cron-timeout": "Der Cron wurde gestoppt, um die maximale PHP-Ausführungszeit nicht zu überschreiten. Bitte führen Sie den Cron über das Terminal aus, um dieses Limit zu vermeiden.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "Die CSV-Datei muss mindestens 2 Spalten enthalten",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
     "current-quarter": "Aktuelles Quartal",
@@ -1321,7 +1321,7 @@
     "quantity-served": "Anzahl serviert",
     "quantity-sold": "Verkaufte Menge",
     "qz-tray-connected": "QZ Tray verbunden",
-    "qz-tray-connected-successfully": "Conectado a QZ Tray correctamente.",
+    "qz-tray-connected-successfully": "Erfolgreich mit QZ Tray verbunden.",
     "randomizer-generating-more-items": "Generiere weitere Elemente...",
     "rate": "Rate",
     "rates": "Preise",
@@ -1522,7 +1522,7 @@
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Nach Soll absteigend sortieren",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
