--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -42,7 +42,7 @@
     "accounting-items": "Accounting items",
     "accounting-lines-error": "Accounting lines error",
     "accounting-plan": "Accounting plan",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "The accounting plan must have at least 2 levels: accounts and subaccounts.",
     "accounting-possible-duplicated": "Accounting entry possible duplicated of this other. If there isn't, to avoid this message, simply change the concept.",
     "accounting-reports": "Accounting reports",
     "accounting-within-regularization": "There is already a tax regularization in this period. No changes can be made.",
@@ -365,7 +365,7 @@
     "cron-job": "Scheduled Task",
     "cron-timeout": "The cron has stopped to prevent exceeding the maximum PHP execution time. Please run the cron from the terminal to avoid this limit.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "The CSV must have at least 2 columns",
     "currency": "Currency",
     "currency-position": "Currency position",
     "current-quarter": "Current quarter",
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Puede añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulse el botón línea para una línea sin producto.",
     "new-password": "New password",
     "new-price": "New price",
-    "new-product": "Nuevo producto",
+    "new-product": "New product",
     "new-refund": "New refund",
     "new-subaccount": "New Subaccount",
     "new-supplier": "New supplier",
@@ -1512,25 +1512,25 @@
     "social-security-number": "Social Security number",
     "software": "Software",
     "sort": "Order",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-balance-asc": "Sort by balance ascending",
+    "sort-by-balance-desc": "Sort by balance descending",
+    "sort-by-code-asc": "Sort by code ascending",
+    "sort-by-code-desc": "Sort by code descending",
     "sort-by-column": "Sort by column",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Sort by credit descending",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-debit-asc": "Sort by debit ascending",
+    "sort-by-debit-desc": "Sort by debit descending",
+    "sort-by-description-asc": "Sort by description ascending",
     "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-asc": "Sort by price ascending",
+    "sort-by-price-desc": "Sort by price descending",
     "sort-by-ref-asc": "Sort by reference asc.",
     "sort-by-ref-desc": "Sort by reference desc.",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-asc": "Sort by stock ascending",
+    "sort-by-stock-desc": "Sort by stock descending",
     "sorted-asc": "Sorted ascending",
     "sorted-desc": "Sorted descending",
     "source": "Fuente",
