--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -116,7 +116,7 @@
     "app-storage": "Archiviazione",
     "applied-tax": "imposta applicata",
     "apply": "Applica",
-    "apply-to": "Applicare a",
+    "apply-to": "Applica a",
     "approve": "Approvare",
     "approve-document": "Approvare documento",
     "approve-document-same-date": "approva-documento-stessa-data",
