--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1524,7 +1524,7 @@
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Ordenar por descrição descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
