--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1523,7 +1523,7 @@
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Ordenar por precio descendente",
