--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -42,7 +42,7 @@
     "accounting-items": "Elementos de contabilidade",
     "accounting-lines-error": "Erro nas liñas do asento contable",
     "accounting-plan": "Plan contable",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "O plan contable debe ter polo menos 2 niveis: contas e subcontas.",
     "accounting-possible-duplicated": "O asento contable posiblemente está duplicado con este outro. Se non é así, para evitar esta mensaxe, simplemente cambie o concepto.",
     "accounting-reports": "Informes de contabilidade",
     "accounting-within-regularization": "O asento pertence a unha regularización do imposto %tax%. Non pode ser borrado.",
@@ -365,7 +365,7 @@
     "cron-job": "Tarefa programada",
     "cron-timeout": "O cron detívose para non exceder o tempo máximo de execución de PHP. Por favor, execute o cron dende terminal para evitar este límite.",
     "crons": "Crons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "O CSV debe ter polo menos 2 columnas",
     "currency": "Moeda",
     "currency-position": "Posición do símbolo de moeda",
     "current-quarter": "Trimestre actual",
@@ -1075,7 +1075,7 @@
     "new-invoice-line-p": "Podes engadir un produto premendo o botón produto ou escribindo a súa referencia ou código de barras no campo código de barras. Ou preme o botón liña para unha liña sen produto.",
     "new-password": "Novo contrasinal",
     "new-price": "Novo prezo",
-    "new-product": "Nuevo producto",
+    "new-product": "Novo produto",
     "new-refund": "Nova devolución",
     "new-subaccount": "Nova subconta",
     "new-supplier": "Novo provedor",
@@ -1523,10 +1523,10 @@
     "sort-by-date-desc": "Ordear por data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-description-asc": "Ordenar por descrición ascendente",
+    "sort-by-description-desc": "Ordenar por descrición descendente",
+    "sort-by-price-asc": "Ordenar por prezo ascendente",
+    "sort-by-price-desc": "Ordenar por prezo descendente",
     "sort-by-ref-asc": "Ordear por referencia asc.",
     "sort-by-ref-desc": "Ordear por referencia desc.",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
