Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1512,7 +1512,7 @@
     "social-security-number": "Sozialversicherungsnummer",
     "software": "Software",
     "sort": "Reihenfolge",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Nach Saldo aufsteigend sortieren",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
