--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1428,7 +1428,7 @@
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Wyszukaj we wszystkich stronach programu",
     "search-message": "Szukaj wiadomości",
     "search-product": "Szukaj produktu",
     "seats": "Miejsca",
@@ -1698,7 +1698,7 @@
     "two-factor-auth-enable": "Włącz uwierzytelnianie dwuetapowe",
     "two-factor-auth-enabled": "Autoryzacja dwuetapowa włączona",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
-    "two-factor-code": "Kod dwóch czynników",
+    "two-factor-code": "Kod dwuskładnikowy",
     "two-factor-enabled": "Aktywuj uwierzytelnianie dwuskładnikowe",
     "type": "Typ",
     "type-alert": "Typ alarmu",
