--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1513,7 +1513,7 @@
     "software": "Software",
     "sort": "Ordenar",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Ordenar por saldo decrescente",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar por coluna",
