Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1515,7 +1515,7 @@
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Ordina per codice decrescente",
     "sort-by-column": "Ordina per colonna",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
     "sort-by-credit-desc": "Ordenar por haber descendente",
@@ -1529,7 +1529,7 @@
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Ordina per giacenza crescente",
     "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
