Actualizar traducciones y corregir firma de método en CalculatorModSpain

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1517,14 +1517,14 @@
     "sort-by-code-asc": "Sort by code ascending",
     "sort-by-code-desc": "Sort by code descending",
     "sort-by-column": "Sort by column",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Sort by credit ascending",
     "sort-by-credit-desc": "Sort by credit descending",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
     "sort-by-debit-asc": "Sort by debit ascending",
     "sort-by-debit-desc": "Sort by debit descending",
     "sort-by-description-asc": "Sort by description ascending",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Sort by description descending",
     "sort-by-price-asc": "Sort by price ascending",
     "sort-by-price-desc": "Sort by price descending",
     "sort-by-ref-asc": "Sort by reference asc.",
