--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1512,9 +1512,9 @@
     "social-security-number": "Numéro de sécurité sociale",
     "software": "Logiciel",
     "sort": "Commande",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Trier par solde croissant",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Trier par code croissant",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Tri par colonne",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
@@ -1526,11 +1526,11 @@
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Trier par prix décroissant",
     "sort-by-ref-asc": "Trier par référence asc.",
     "sort-by-ref-desc": "Trier par référence descendante.",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Trier par stock décroissant",
     "sorted-asc": "Tri par ordre croissant",
     "sorted-desc": "Tri par ordre décroissant",
     "source": "Source",
