--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1517,8 +1517,8 @@
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordina per codice decrescente",
     "sort-by-column": "Ordina per colonna",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-asc": "Ordina per credito crescente",
+    "sort-by-credit-desc": "Ordina per credito decrescente",
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordina per data decrescente",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
