--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -42,7 +42,7 @@
     "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Błąd w liniach księgowych",
     "accounting-plan": "Plan księgowy",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "Plan kont musi mieć co najmniej 2 poziomy: konta i podkonta.",
     "accounting-possible-duplicated": "Możliwe, że to zapis księgowy jest zduplikowany z innym. Jeśli nie, aby uniknąć tego komunikatu, po prostu zmień koncepcję.",
     "accounting-reports": "Raporty księgowe",
     "accounting-within-regularization": "W tym okresie już istnieje regulacja podatkowa. Nie można wprowadzać zmian.",
@@ -645,7 +645,7 @@
     "export-bill": "Faktura eksportowa",
     "extra-file": "Dodatkowy plik",
     "failed": "Niepowodzenie",
-    "fails": "Fallos",
+    "fails": "Błędy",
     "families": "Rodziny",
     "family": "Rodzina",
     "family-code": "Kod rodziny",
@@ -1095,7 +1095,7 @@
     "no-plugins-installed": "Brak zainstalowanych wtyczek",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Nie znaleziono wyników",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
     "no-updates-now": "Brak aktualizacji w tej chwili",
@@ -1530,7 +1530,7 @@
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Sortuj według stanu magazynowego (malejąco)",
     "sorted-asc": "Posortowane rosnąco",
     "sorted-desc": "Posortowane malejąco",
     "source": "Źródło",
