--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1095,7 +1095,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
-    "no-results-found": "Nenhum resultado encontrado",
+    "no-results-found": "Não foram encontrados resultados",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
     "no-updates-now": "Não há atualizações neste momento",
@@ -1525,7 +1525,7 @@
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Ordenar por preço crescente",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
