--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1086,7 +1086,7 @@
     "no-admin": "Kein Administrator",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
-    "no-devices-detected-scan-usb": "Es wurden keine Geräte erkannt. Versuchen Sie es mit einem Scan.",
+    "no-devices-detected-scan-usb": "Es wurden keine Geräte erkannt. Bitte versuchen Sie einen Scan.",
     "no-document-selected": "Es wurde kein Dokument ausgewählt.",
     "no-extra-lines": "Keine zusätzlichen Zeilen hinzufügen",
     "no-gaps-found": "Keine Lücken gefunden",
@@ -1521,7 +1521,7 @@
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Nach Soll aufsteigend sortieren",
     "sort-by-debit-desc": "Nach Soll absteigend sortieren",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
