--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -598,7 +598,7 @@
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
     "es-tax-exception-n1": "es-tax-exception-n1",
     "es-tax-exception-n5": "es-tax-exception-n5",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "Espanha: N6 Inversão do sujeito passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Régimen especial da agricultura, pecuária e pesca",
@@ -1095,7 +1095,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Não foram encontrados resultados",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
     "no-updates-now": "Não há atualizações neste momento",
@@ -1522,7 +1522,7 @@
     "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Ordenar por débito decrescente",
     "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
